--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,6 @@ pandas
 python-dateutil
 fuzzywuzzy
 python-Levenshtein
-crewai
 langchain-core
 langchain-openai
 langchain-groq
@@ -19,3 +18,4 @@ redis
 boto3
 azure-storage-blob
 google-cloud-storage
+pandas
